<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/bgcolor"
    tools:ignore="RtlCompat"
    tools:context=".settings">
    <LinearLayout
        android:layout_weight="0.8"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:background="@color/colorPrimaryDark"
        android:layout_height="0dp">
        <TextView
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_back"
            android:backgroundTint="@color/white"
            android:onClick="btnback"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            ></TextView>
        <TextView
            android:layout_weight="5"
            android:text="@string/settings"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            ></TextView>


    </LinearLayout>
<LinearLayout
    android:layout_weight="9.2"
    android:layout_width="match_parent"
    
    android:layout_height="0dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:background="@drawable/btnnormal"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"

                    android:layout_height="match_parent">
                           <Button
                        android:text="@string/no"
                        android:id="@+id/btnsoundintro"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:background="@drawable/btnnormal2"
                        android:onClick="btnsoundintro"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></Button>
                    <TextView
                        android:padding="10dp"
                        android:text="@string/soundintro"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></TextView>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="@color/grey"
                    ></View>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"

                    android:layout_height="match_parent">

                    <Button
                        android:text="@string/no"
                        android:textColor="@color/white"
                        android:background="@drawable/btnnormal2"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:id="@+id/btnsoundbib"
                        android:onClick="btnsoundbib"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></Button>
                    <TextView
                        android:padding="10dp"
                        android:text="@string/soundbib"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></TextView>
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="@color/grey"
                    ></View>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"

                    android:layout_height="match_parent">
                       <Button
                        android:text="@string/no"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:background="@drawable/btnnormal2"
                        android:onClick="btnvibrate"
                        android:id="@+id/btnvibrate"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></Button>
                    <TextView
                        android:padding="10dp"
                        android:text="@string/vibrate"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></TextView>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="@color/grey"
                    ></View>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/infovibrate"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="18sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:padding="10dp"
                    ></TextView>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/btnnormal"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
    android:textSize="20sp"
    android:padding="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:text="@string/lastcount"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></TextView>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <Button
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="-"
                        android:onClick="btnminus"

                        android:background="@drawable/btnnormal2"
                        android:textColor="@color/white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></Button>
                    <TextView
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="100"
                        android:textSize="24sp"
                        android:gravity="center"
                        android:id="@+id/tv_lastcount"

                        android:textColor="@color/colorPrimaryDark"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"></TextView>
                    <Button
                        android:layout_margin="10dp"
                        android:layout_weight="1"
                        android:text="+"
                        android:onClick="btnplus"
                        android:background="@drawable/btnnormal2"
                        android:textColor="@color/white"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></Button>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choooselastcount"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:onClick="btnchouselastcount"
                    android:textColor="@color/white"
                    android:background="@drawable/btnnormal2"
                    android:padding="10dp"
                    ></Button>
            </LinearLayout>

            <LinearLayout
                android:background="@drawable/btnnormal"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/whenlastcount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></TextView>


                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"

                    android:layout_height="match_parent">
                            <Button
                        android:text="@string/no"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:background="@drawable/btnnormal2"
                        android:onClick="btnrestartlastcount"
                        android:id="@+id/btnrestartlastcount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></Button>
                    <TextView
                        android:padding="10dp"
                        android:text="@string/restartlastcount"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></TextView>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_margin="10dp"
                    android:background="@color/grey"
                    ></View>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_marginBottom="10dp"

                    android:layout_height="match_parent">
                         <Button
                        android:text="@string/no"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="10dp"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:background="@drawable/btnnormal2"
                        android:onClick="btnremindlastcount"
                        android:id="@+id/btnremindlastcount"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></Button>
                    <TextView
                        android:padding="10dp"
                        android:text="@string/remindlastcount"
                        android:layout_weight="3"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:gravity="center_vertical"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"></TextView>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:background="@drawable/btnnormal"
                android:layout_margin="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="20sp"
                    android:padding="10dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:text="@string/settingtotal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></TextView>


                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/restarttotal"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:onClick="btnrestarttotal"
                    android:textColor="@color/white"
                    android:background="@drawable/btnnormal2"
                    android:padding="10dp"
                    ></Button>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    
</LinearLayout>
</LinearLayout>